additional flicker fix

--- a/static/home.css
+++ b/static/home.css
@@ -32,6 +32,8 @@
     -webkit-backface-visibility:  hidden;
     backface-visibility: hidden;
      -webkit-tap-highlight-color:  transparent;
+     -webkit-perspective: 1000;
+     perspective: 1000;
 }
 
 body {
